--- a/src/css/turtles/_pricelist.scss
+++ b/src/css/turtles/_pricelist.scss
@@ -25,7 +25,7 @@
             margin-left: 40px;
             ul li.entry{
                 float:none;
-
+                padding-top:10px;
                 .pull-right{
                     float:right;
                     width:25%;
@@ -33,11 +33,13 @@
 
                 h3{
                     font-size: 1.2em;
+                    margin-bottom: 10px;
                 }
 
                 p{
                     font-size: 0.8em;
                     font-weight: 200;
+                    margin-bottom: 10px;
                 }
             }
         }
@@ -58,11 +60,8 @@
 
 .widget .pricelist{
     .header{
-        height:60px;
-
-        h2{
-            line-height: 2.08em;
-            line-height: 60px;
-        }
+        display: none;
     }
+
+
 }
